# Geometric-Action-Model

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  index.html  pyproject.toml  requirements.txt
docs/: evaluation.md  training.md
scripts/: run_hf_gam_libero_plus_eval.sh  run_libero_batched_eval.py  run_libero_eval.sh  setup_libero_plus.sh  setup_sources.sh  smoke_gam_predictor.py
src/: eval_libero.py  eval_libero_unified.py  sitecustomize.py  train_robot.py
src/gam/: __init__.py
src/gam/evaluation/: __init__.py  libero_plus.py  registry.py  video.py
src/gam/training/: __init__.py  checkpoint.py  data.py  debug.py  distributed.py  ema.py  eval_runtime.py  metrics.py  model.py  optim.py
src/robot/: README.md  __init__.py
src/robot/data/: __init__.py  dataset.py
src/robot/evaluation/: __init__.py  closed_loop_libero_eval.py  rollout_env.py
src/robot/losses/: __init__.py  reg_loss.py  unified_loss.py
src/robot/modeling/: __init__.py  action_head_oft.py  action_head_v2.py  action_tokenizer.py  backbone_factory.py  conditioning.py  da3_giant_encoder.py  future_predictor.py  sigreg.py
src/robot/viz/: __init__.py  visualization.py
static/css/: style.css
static/js/: main.js
static/videos/hero_hls/: 360p.m3u8  360p_000.ts  360p_001.ts  360p_002.ts  360p_003.ts  360p_004.ts  360p_005.ts  360p_006.ts  360p_007.ts  360p_008.ts  360p_009.ts  360p_010.ts  360p_011.ts  360p_012.ts  360p_013.ts  360p_014.ts  360p_015.ts  360p_016.ts  360p_017.ts  360p_018.ts  360p_019.ts  360p_020.ts  360p_021.ts  360p_022.ts  360p_023.ts  (+72 more)
(+8 files in other folders)
